[gd_scene load_steps=3 format=3 uid="uid://bqrs4u8bifvkc"]

[ext_resource type="Script" uid="uid://cfju2ihwmutof" path="res://Scripts/pause_menu.gd" id="1_emv3i"]

[sub_resource type="LabelSettings" id="LabelSettings_y2c35"]
font_size = 141

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_emv3i")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.14509805)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.5
offset_top = -255.0
offset_right = 513.5
offset_bottom = 108.00015
grow_horizontal = 2
grow_vertical = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_y2c35")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = 16.0
offset_right = -62.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.12, 3.12)
text = "Resume game"

[node name="Button" type="Button" parent="."]
offset_right = 27.0
offset_bottom = 31.0
scale = Vector2(3.12, 3.12)
text = " II "

[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
